# netbox-plugin-config-officer-2

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config_officer/: __init__.py  choices.py  cisco_diff.py  collect.py  collector.py  config.py  config_manager.py  custom_exceptions.py  filters.py  forms.py  git_manager.py  git_utils.py  jobs.py  models.py  navigation.py  netbox_sync.py  parsers.py  ssh_config  tables.py  template_content.py  urls.py  views.py  webhook.py  worker.py
config_officer/api/: __init__.py  serializers.py  urls.py  views.py
config_officer/migrations/: 0001_initial.py  0002_alter_collection_options_alter_service_options_and_more.py  0003_collectschedule_custom_field_data_and_more.py  0003_collectschedule_webhook_secret_and_more.py
config_officer/templates/config_officer/: collection_message.html  compliance_view.html  device_running_config.html  generic_list.html  message.html  navi_panel.html  service_list.html  service_mapping_list.html  service_rule_list.html  service_view.html  template_view.html
config_officer/templates/config_officer/inc/: device_buttons.html
scripts/: run_tests_for_changed.py
tests/: conftest.py  test_cisco_diff.py
