[tool.poetry]
name = "netbox-plugin-config-officer-2"
version = "0.1.0"
description = "NetBox plugin for collecting running configs, tracking diffs and checking compliance with templates"
authors = [
    "Michal Juskiewicz <m.juskiewicz66@gmail.com>",
    "Sergei Artemov <artemov.sergey1989@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Juzekkk/netbox-plugin-config-officer-2"
repository = "https://github.com/Juzekkk/netbox-plugin-config-officer-2"
packages = [
    { include = "config_officer" },
]
include = [
    "config_officer/templates/**/*",
]

[tool.poetry.dependencies]
python = "^3.10"
scrapli = "^2024.1"
GitPython = "^3.1"
diffios = "^0.0.9"
XlsxWriter = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"